--- a/_source/2015-06-16-test post.Rmd
+++ b/_source/2015-06-16-test post.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "test Post"
+title: "test post"
 author: "sameer"
-date: "June 15, 2015"
+date: "June 16, 2015"
 output: html_document
 layout: post
 tags: [R, Jekyll]
 permalink: test
+comments: yes
 ---
 
 muyt This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
